fixed bugs with test cases